@@ -20,6 +20,9 @@ dpkg (1.16.13) UNRELEASED; urgency=low
     setting package selections. Suggested by Klaus Ita <koki.eml@gmail.com>.
   * Recognize «start-stop-daemon -C» as documented. Closes: #719746
     Reported by Brian S. Julin <bri@abrij.org>.
+  * Correctly parse C-style diff filenames in Dpkg::Source::Patch, to avoid
+    directory traversal attempts from hostile source packages when unpacking
+    them. Reported by Jakub Wilk <jwilk@debian.org>. Fixes CVE-2014-0471.
 
   [ Updated scripts translations ]
   * Fix a typo in the German scripts translation.
